--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <title>HOME</title> 
 </head> 
 <Body style = "background-color:teal";
-<center><h1><u><FONT COLOR="Brown">GOVERNMENT ENGINEERING 
-COLLEGE, GANDHINAGAR</FONT></u></h1></center> 
+<center><h1><u><FONT COLOR="Brown">VISHWAKARMA GOVERNMENT ENGINEERING COLLEGE</FONT></u></h1></center> 
 <table width = "80%" border = "1" align = "center" style = "backgroundcolor:red"> 
 <tr> 
 <th><h2><a href = "home.html">home</a></h2></th> 
@@ -17,7 +16,7 @@ COLLEGE, GANDHINAGAR</FONT></u></h1></center>
 <H2><FONT COLOR = "BLUE"></FONT></H2> 
 <center> 
 <div style="Width:1000"> 
-<p><h3> The Governement Engineering College, Gandhinagar is geared specially to provide high quality education adopting the latest techniques and methodology for curriculum transaction and poised to develop into an extraordinary college of higher learning and interdisciplinary research. The college also inspires to kindle in the students the desire for lifelong learning and for reaching the unreached.</h3></p> 
+<p><h3> VISHWAKARMA GOVERNMENT ENGINEERING COLLEGE is geared specially to provide high quality education adopting the latest techniques and methodology for curriculum transaction and poised to develop into an extraordinary college of higher learning and interdisciplinary research. The college also inspires to kindle in the students the desire for lifelong learning and for reaching the unreached.</h3></p> 
 </div> 
 </center> 
 </body></head> 
